--- a/SOL/Practica2_6/src/VistaControlador/Ventana_practica2_6.form
+++ b/SOL/Practica2_6/src/VistaControlador/Ventana_practica2_6.form
@@ -3,6 +3,9 @@
 <Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <NonVisualComponents>
     <Container class="javax.swing.JFrame" name="ventana_log_correcto">
+      <Properties>
+        <Property name="title" type="java.lang.String" value="Principal"/>
+      </Properties>
 
       <Layout>
         <DimensionLayout dim="0">
